# Enterprise-Knowledge-assistant

./: .env  README.md  api.py  chatbot.py  embeddings.py  format.py  ingestion.py  llm.py  main.py  prompt.py  pyproject.toml  render.yaml  requirements.txt  retriever.py  splitter.py  test.py  vector_store.py
data/faiss_index/: index.faiss  index.pkl
