[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jsonpatch>=1.33",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-elasticsearch>=1.0.0",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.1",
    "streamlit>=1.53.1",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]
